update to java 21, update dependencies, refactor deprecated stuff